# ivi-homescreen-plugins-example

./: LICENSE  README.md
plugins/: CMakeLists.txt  config_plugins.h.in  generated_plugin_registrant.cc  generated_plugin_registrant.h  platform_view_listener.h
plugins/carverx5_cnc/: CMakeLists.txt  carverx5_cnc_plugin.cc  carverx5_cnc_plugin.h  carverx5_cnc_plugin_c_api.cc  messages.cc  messages.h
plugins/carverx5_cnc/include/carverx5_cnc/: carverx5_cnc_plugin_c_api.h
plugins/common/: CMakeLists.txt  common.h  logging.h
plugins/common/json/: json_utils.cc  json_utils.h
plugins/common/shared_library/: shared_library.h
plugins/common/string/: string_tools.h
plugins/common/time/: time_tools.h
plugins/common/tools/: command.cc  command.h  encodable.cc  encodable.h
plugins/common/uuid/: uuidxx.cc  uuidxx.h
